<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/vs_wind"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/defaul_space"
    android:visibility="invisible">


    <LinearLayout
        style="@style/ch_row"
        android:layout_width="match_parent"
        android:layout_height="97dp">

        <ImageView
            android:id="@+id/fighter_icon"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:baselineAligned="false"
            android:visibility="visible"
            tools:src="@drawable/ic_profile_place_holder" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/vs_icon"
            android:layout_width="62dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:src="@drawable/VS_icon" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/enemy_icon"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            tools:src="@drawable/ic_profile_place_holder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include
            android:id="@+id/ll_personal_ch"
            layout="@layout/vg_fighter_ch"
            android:layout_width="190dp"
            android:layout_height="match_parent" />

        <include
            android:id="@+id/ll_enemy_ch"
            layout="@layout/vg_enemy_ch"
            android:layout_width="190dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/a_winner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            tools:text="@string/place_holder_winner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="64dp"
            android:gravity="top|center">

            <TextView
                android:id="@+id/dmg_done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|center"
                android:textSize="20sp"
                tools:text="@string/place_holder_dmgDone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="64dp">

            <TextView
                android:id="@+id/hp_left"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="top|center"
                android:textSize="20sp"
                tools:text="@string/place_holder_HPleft" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>